# rust_cli

./: Cargo.toml
src/: lib.rs  main.rs
