[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.32", features=["derive"]}
walkdir = "2.3.2"
md5 = "0.7.0"
rayon = "1.6.1"
indicatif = {version = "*", features = ["rayon"]}
chrono = "0.4.31"
directories = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "2.0.0"
